--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container flex-lg-column" id="one">
       <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
         <span class="h3 fw-regular d-block d-lg-none">Yash</span>
-        <img src="images\homeface1.svg1" class="d-none d-lg-block">
+        <img src="images\homeface1.svg" class="d-none d-lg-block">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
